tests/cases/fail/module_private_function_access_helpers.p4
def _twice(x: int) -> int:
    return x * 2
